# EchoScript

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
demo/: CMakeLists.txt  demo.c  str.c
demo/include/: str.h
include/: engine.h  file_interface.h  parse_pipe.h  parser.h  structs.h  tokenizer.h  utils.h
src/: engine.c  file_interface.c  main.c  parse_pipe.c  parser.c  tokenizer.c  utils.c
tests/: CMakeLists.txt  demo_tests.c
